Added profile page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <!-- Custom styles for this template -->
     <link href="css/creative.min.css" rel="stylesheet">
 
+    <!-- my CSS -->
+    <link rel="stylesheet" type="text/css" href="css/auth.css">
+
     
 
   </head>
@@ -72,7 +75,8 @@
                 <p id="username"></p>
             </div>
 
-            <a id="gLogout" href="#" onclick="signOut();">Sign out</a>
+            <button id="gLogout" onclick="signOut();">Sign out</button>
+            <button id= "myProfile" onclick="dashboard();">My Profile</button>
 
           </div>
         </div>
